Fix window list overflow

--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -151,6 +151,10 @@
     padding: 20px 7px 10px 7px;
 }
 
+.upper-sidebar {
+    overflow-y: scroll;
+}
+
 .lower-sidebar {
     .btn {
         width: 100%;
